padding fix again

--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ body {
 .readbtn {
     background: black;
     color: white;
-    padding: 30px 45x;
+    padding: 30px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
