--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
     font-family: Arial, sans-serif;
 }
 
+/* NAVIGATION BAR */
 .navBar {
     display: flex;
     justify-content: space-between;
@@ -19,8 +20,8 @@ body {
 }
 
 .logo {
-    font-family: "cursive";
-    font-size: 22px;
+    font-family: "Dancing Script", "cursive";
+    font-size: 32px;
     font-weight: bold;
 }
 
@@ -37,7 +38,8 @@ body {
 .nav-links a {
     text-decoration: none;
     color: black;
-    font-size: 26px;
+    padding-right: 30px;
+    font-size: 24px;
 }
 
 .readbtn {
@@ -52,4 +54,92 @@ body {
 
 .btn:hover {
     background-color: gray;
+}
+
+
+
+/* HOME - HERO */
+#hero {
+    position: relative;
+    width: 100%;
+    height: 90vh;
+    background: url('your-image.jpg') no-repeat center center/cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    padding: 20px;
+}
+
+
+#hero::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4); 
+    z-index: 1;
+}
+
+#hero-title, #hero-text {
+    font-family: "Poppins", sans-serif;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 2;
+    max-width: 700px;
+}
+
+#hero h1 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+#hero p {
+    font-size: 1.1rem;
+    margin-bottom: 20px;
+}
+
+.hero-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+.hero-btn {
+    padding: 10px 20px;
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.btn-1 {
+    padding: 12px;
+    border-radius: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
+    background: white;
+    color: black;
+    border: 1px solid black;
+}
+
+.btn-2 {
+    padding: 12px;
+    border-radius: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
+    background: transparent;
+    border: 1px solid white;
+    color: white;
+}
+
+.hero-btn:hover {
+    opacity: 0.8;
 }
