--- a/index.css
+++ b/index.css
@@ -1,11 +1,8 @@
-* {
+body {
+    font-family: "Poppins", sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body {
-    font-family: "Poppins", sans-serif;
 }
 
 /* NAVIGATION BAR */
@@ -25,18 +22,10 @@ body {
     font-weight: bold;
 }
 
-.nav-routes {
-    font-family: "Poppins", sans-serif;
-}
-
 .nav-links {
     list-style: none;
     display: flex;
     gap: 20px;
-}
-
-.nav-links li {
-    display: inline;
 }
 
 .nav-links a {
@@ -60,10 +49,7 @@ body {
     background-color: gray;
 }
 
-
-
 /* HOME - HERO */
-
 #home-hero {
     padding-top: 50px;
     padding-left: 20px;
@@ -73,7 +59,7 @@ body {
 #hero {
     position: relative;
     width: 100%;
-    height: 125vh;
+    height: 800px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -81,7 +67,7 @@ body {
     color: white;
     padding: 20px;
     overflow: hidden;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     transition: background-image 1s ease-in-out;
 }
@@ -97,18 +83,9 @@ body {
     z-index: 1;
 }
 
-#hero-title, #hero-text {
-    font-family: "Poppins", sans-serif;
-}
-
-.hero-slider {
-    display: none;
-}
-
 .hero-slide {
     position: absolute;
     width: 100%;
-    height: 100%;
     background-size: cover;
     background-position: center;
     opacity: 0;
@@ -118,8 +95,6 @@ body {
 .hero-slide.active {
     opacity: 1;
 }
-
-
 
 .hero-content {
     position: relative;
@@ -153,7 +128,7 @@ body {
     transition: 0.3s;
 }
 
-.btn-1 {
+.btn-1, .btn-2 {
     padding: 12px;
     border-radius: 5px;
     padding-left: 25px;
@@ -164,10 +139,6 @@ body {
 }
 
 .btn-2 {
-    padding: 12px;
-    border-radius: 5px;
-    padding-left: 25px;
-    padding-right: 25px;
     background: transparent;
     border: 1px solid white;
     color: white;
@@ -177,7 +148,7 @@ body {
     opacity: 0.8;
 }
 
-#book-magic {
+#book-magic, #bob-ong-style {
     max-width: 1200px;
     margin: auto;
     display: flex;
@@ -185,7 +156,7 @@ body {
     align-items: center;
 }
 
-.book-content {
+.book-content, .bob-ong-content {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -230,19 +201,6 @@ body {
 .book-image img {
     max-width: 100%;
     height: auto;
-}
-
-#bob-ong-style {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.bob-ong-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 30px;
 }
 
 .bon-ong-image {
