--- a/index.css
+++ b/index.css
@@ -1,8 +1,10 @@
-body {
+html, body {
     font-family: "Poppins", sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 /* NAVIGATION BAR */
@@ -59,7 +61,7 @@ body {
 #hero {
     position: relative;
     width: 100%;
-    height: 800px;
+    height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -149,7 +151,7 @@ body {
 }
 
 #book-magic, #bob-ong-style {
-    max-width: 1200px;
+    max-width: 1100px;
     margin: auto;
     display: flex;
     justify-content: center;
