--- a/index.css
+++ b/index.css
@@ -443,13 +443,31 @@ body {
 
 /* QUIZ */
 
-.quiz {
+.intro-box {
     margin-left: 20%;
     margin-right: 20%;
     padding: 40px;
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+.intro-box h3 {
+    font-weight: bold;
+}
+
+.intro-box h2 {
+    margin: 0;
+    margin-bottom: 40px;
+    font-weight: lighter;
+}
+
+.intro-box h1 {
+    font-size: 42px;
+}
+
+.intro-box p {
+    font-size: 14px;
+    margin-bottom: 50px;
 }
 
 .qbox {
@@ -483,21 +501,6 @@ body {
     max-width: 100%;
     height: auto;
     box-shadow: rgba(0, 0, 0, 0.2);
-}
-
-.quiz h2 {
-    margin: 0;
-    margin-bottom: 40px;
-    font-weight: lighter;
-}
-
-.quiz h1 {
-    font-size: 42px;
-}
-
-.quiz p {
-    font-size: 14px;
-    margin-bottom: 50px;
 }
 
 .quiz-btn {
