--- a/index.css
+++ b/index.css
@@ -517,12 +517,19 @@ body {
     margin: 0 auto;
     text-align: center;
     overflow: hidden;
+    color: white;
 }
 
 .reading-section {
     display: none;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .reading-section.active {
@@ -532,7 +539,10 @@ body {
 
 .reading-section h1{
     font-family: 'Permanent Marker Regular', sans-serif;
-    color: white;
+}
+
+.reading-content p{
+    font-family: 'Poppins', sans-serif;
 }
 
 .reading-buttons {
