--- a/index.css
+++ b/index.css
@@ -941,6 +941,7 @@ body {
         text-align: left;
         padding: 20px;
         margin-top: 10px;
+        max-width: 410px;
     }
 
     #story-quiz h2 {
