--- a/index.css
+++ b/index.css
@@ -332,79 +332,151 @@ body {
 
 /* EXPLORE PAGE */
 
-#explore-start {
-    font-family: "Poppins", sans-serif;
-    padding: 50px;
-    margin: 0 auto;   
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-}
-
-#explore-start h1 {
+#explore h1 {
     font-weight: bold;
     padding-bottom: 10px;
-    font-size: 36px;
+    font-size: 80px;
 }
 
-#explore-start h3 {
+#explore h3 {
     font-weight: lighter;
 }
 
-#explore-start p {
-    font-size: 12px;
+#explore p {
+    font-size: 40px;
+    font-weight: lighter;
 }
 
 #explore {
+    margin: 60px;
     font-family: "Patrick Hand", cursive;
 }
 
-#e-1 h1 {
-    text-align: left;
-}
-
-.e-c-l-b {
-    padding: 15px;
-    text-align: left;
-}
-.e-content-l {
+.sets {
+    display: grid;
     width: 100%;
     justify-content: center;
-    align-items: left;
+}
+
+#first-set {
+    grid-template-columns: auto 1fr;
+    align-items: start;
     text-align: left;
+    gap: 50px;
 }
 
-.e-content-l img{
-    width: 40%;
+#first-set img{
+    flex-shrink: 0;
+    height: 400px;
+    object-fit: contain;
+    justify-self: start;
 }
 
-.e-content-l p {
-    width: 50%;
-
+#first-set p {
+    max-width: 70%;
 }
 
 .e-c-r-b {
-    padding: 15px;
     text-align: right;
 }
-.e-content-r {
+
+#second-set {
+    grid-template-columns: 1fr auto;
+    align-items: flex-end;
+    text-align: end;
+    gap: 50px;
+}
+
+#second-set img {
+    flex-shrink: 0;
+    height: 400px;
+    object-fit: contain;
+    justify-self: end;
+}
+
+#second-set p {
+    padding-left: 30%;
+}
+
+#e-c-rd-b {
+    align-items: center;
     width: 100%;
-    justify-content: center;
-    align-items: right;
     text-align: right;
 }
 
-.e-content-r img{
-    width: 40%;
+#third-set {    
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;  
+    width: auto;
+    margin-left: auto;
+    text-align: center !important;
 }
 
-.e-content-r p {
+#third-set img {
+    height: 430px;
+}
+
+#third-set p {
+    max-width: 50%;
+    object-fit: contain;
+}
+
+#fourth-set {
+    grid-template-columns: auto 1fr;
+    align-items: start;
+    text-align: left;
+    gap: 50px;
+}
+
+#fourth-set img {
+    width: 500px;
+}
+
+#fourth-set p {
+    max-width: 50%;
+    object-fit: contain;
+    align-self: flex-end;
+}
+
+#fifth-set {
+    grid-template-columns: 1fr auto;
+    align-items: flex-end;
+    text-align: end;
+    gap: 50px;
+}
+
+#fifth-set img{
+    max-width: 100%;
+}
+
+#fifth-set p {
+    padding-left: 30%;
+}
+
+#sixth-set img {
+    width: 800px;
+}
+
+#sixth-set p{
+    text-align: center;
     width: 50%;
-
 }
 
+#last-set {
+    grid-template-columns: 1fr auto;
+    align-items: start;
+    text-align: left;
+    gap: 50px;
+}
+
+#last-set img {
+    width: 900px;
+}
+
+#last-set p {
+    margin-right: 20%;
+}
 /* ABOUT */
 
 .about {
@@ -835,7 +907,7 @@ body {
     .navBar {
         height: 97px;
     }
-    
+
     .hamburger {
         display: block;
         z-index: 3;
