--- a/index.css
+++ b/index.css
@@ -941,6 +941,8 @@ body {
         flex-direction: column;
         padding: 10px 0;
         text-align: center;
+        transform: translateX(0);
+
     }
 
         .nav-links li {
