--- a/index.css
+++ b/index.css
@@ -677,7 +677,7 @@ body {
 }
 
 .reading-section h1{
-    font-family: 'Permanent Marker Regular', sans-serif;
+    font-family: "Permanent Marker", serif;
     margin: 60px;
     font-size: 52px;
 }
