--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Peralta&display=swap');
+
 
 
 html, body {
@@ -706,6 +708,7 @@ body {
 
 #remarks-text {
     margin-bottom: 150px;
+    font-family: "Peralta", cursive;
 }
 .reading-content h2 {
     margin-bottom: 30px;
