--- a/index.css
+++ b/index.css
@@ -712,6 +712,7 @@ body {
 }
 .reading-content h2 {
     margin-bottom: 30px;
+    font-family: "Peralta", serif;
 }
 .reading-content p{
     font-family: 'Poppins', sans-serif;
