--- a/index.css
+++ b/index.css
@@ -1148,5 +1148,6 @@ body {
         font-family: "Permanent Marker", serif;
         margin: 60px;
         font-size: 30px;
+        margin-bottom: -20px;
     }
 }
