--- a/index.css
+++ b/index.css
@@ -1189,5 +1189,10 @@ body {
         font-size: 14px;
         margin-bottom: 0 0;
     }
+    
+    .responsive-image {
+        content: url("assets/read/elementary/stickynotes-mobile-elem.png");
+        margin-top: -70px; /* Adjust as needed */
+    }
 }
 
