--- a/index.css
+++ b/index.css
@@ -1193,6 +1193,7 @@ body {
     .elem-stickynotes-image {
         content: url("assets/read/elementary/stickynotes-mobile-elem.png");
         margin-top: -70px; /* Adjust as needed */
+        z-index: 9999; /* Higher value to bring it above others */
     }
 }
 
