--- a/index.css
+++ b/index.css
@@ -178,11 +178,9 @@ body {
     font-size: 1rem;
     cursor: pointer;
     border-radius: 5px;
-    transition: transform 0.2s ease-in-out; /* Smooth scaling effect */
 }
 
 .hero-btn:hover {
-    transform: scale(1.1); /* Slightly increase size on hover */
 } 
 
 
@@ -195,6 +193,11 @@ body {
     color: black;
     border: 1px solid black;
     text-decoration: none;
+}
+
+.btn-1:hover, .btn-2:hover {
+    transform: scale(1.1); /* Slightly increase size on hover */
+    transition: transform 0.2s ease-in-out; /* Smooth scaling effect */
 }
 
 .btn-2 {
